# fleep-mcp

./: .env.example  .gitignore  Plan.md  README.md  pyproject.toml
.clinerules/: project-dependencies.md
src/: __init__.py  fleep_client.py  main.py
src/tools/: __init__.py  create_conversation.py  get_conversation_labels.py  send_message.py  set_conversation_labels.py
tests/: __init__.py  test_create_conversation.py  test_get_conversation_labels.py  test_send_message.py  test_set_conversation_labels.py
